# Frame-Search

./: CMakeLists.txt  README.md
MainProgram/: Main.c  Main.h
Menu/: Menu.c  Menu.h
SystemMethods/: GetDimenByHand.c  GetDimenByHand.h  GetMatrixByHand.c  GetMatrixByHand.h  IOFileMethods.c  IOFileMethods.h
